@@ -13,6 +13,8 @@ import org.openide.util.lookup.ServiceProvider;
 @Element.ElementData(dataFile="element_info.xml")
 public class Nor extends BasicElement 
 {
+	private static final long serialVersionUID = 1L;
+	
     public Nor()
     {
         super(new String[]{"input1", "input2", "output"});
@@ -21,16 +23,17 @@ public class Nor extends BasicElement
     @Override
     public Map<String, Double> process(Map<String, Double> valuesOnPorts) 
     {
-        if(valuesOnPorts.get(getPorts().get(0)).compareTo(new Double(0)) == 0 && valuesOnPorts.get(getPorts().get(1)).compareTo(new Double(0)) == 0)
+        if(valuesOnPorts.get(getPorts().get(0)).compareTo(Double.valueOf(0.d)) == 0 &&
+		   valuesOnPorts.get(getPorts().get(1)).compareTo(Double.valueOf(0.d)) == 0)
         {
-            valuesOnPorts.put(getPorts().get(2), new Double(1));
+            valuesOnPorts.put(getPorts().get(2), Double.valueOf(1.d));
         }
         else
         {
-            valuesOnPorts.put(getPorts().get(2), new Double(0));
+            valuesOnPorts.put(getPorts().get(2), Double.valueOf(0.d));
         }
-        valuesOnPorts.put(getPorts().get(0), new Double(0));
-        valuesOnPorts.put(getPorts().get(1), new Double(0));
+        valuesOnPorts.put(getPorts().get(0), Double.valueOf(0));
+        valuesOnPorts.put(getPorts().get(1), Double.valueOf(0));
         return valuesOnPorts;
     }
 }
